[tool.poetry]
name = "python-fastapi"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [
    { include = "*", from = "src"}
]


[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.2.1"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
pyyaml = "^6.0.1"
pyjwt = "^2.8.0"
pydantic = "^2.6.2"
pydantic-settings = "^2.2.1"
pytz = "^2024.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__",
]

# https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html
[tool.black]
line-length = 110

# https://beta.ruff.rs/docs/settings/
[tool.ruff]
line-length = 110
# https://beta.ruff.rs/docs/rules/
select = ["E", "W", "F"]
ignore = ["F401"]
# Exclude a variety of commonly ignored directories.
respect-gitignore = true
ignore-init-module-imports = true
